==> POMIN-163/stm32/32Demo/Demos_Explorer/SYSTEM/usart/usart.c <==
#include "usart.h"
//////////////////////////////////////////////////////////////////////////////////
//如果使用ucos,则包括下面的头文件即可.
#if SYSTEM_SUPPORT_OS
#include "includes.h"  //ucos 使用
#endif
//////////////////////////////////////////////////////////////////////////////////
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
// ALIENTEK STM32F4探索者开发板
//串口1初始化
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//修改日期:2014/6/10
//版本：V1.5
//版权所有，盗版必究。
// Copyright(C) 广州市星翼电子科技有限公司 2009-2019
// All rights reserved
//********************************************************************************
// V1.3修改说明
//支持适应不同频率下的串口波特率设置.
//加入了对printf的支持
//增加了串口接收命令功能.
//修正了printf第一个字符丢失的bug
// V1.4修改说明
// 1,修改串口初始化IO的bug
// 2,修改了USART_RX_STA,使得串口最大接收字节数为2的14次方
// 3,增加了USART_REC_LEN,用于定义串口最大允许接收的字节数(不大于2的14次方)
// 4,修改了EN_USART1_RX的使能方式
// V1.5修改说明
// 1,增加了对UCOSII的支持
//////////////////////////////////////////////////////////////////////////////////

//////////////////////////////////////////////////////////////////
//加入以下代码,支持printf函数,而不需要选择use MicroLIB
#if 1
#pragma import(__use_no_semihosting)
// 标准库需要的支持函数
struct __FILE {
    int handle;
};
FILE __stdout;
// 定义_sys_exit()以避免使用半主机模式
void _sys_exit(int x) { x = x; }
// 重定义fputc函数
int fputc(int ch, FILE *f) {
    while ((USART1->SR & 0X40) == 0); //循环发送,直到发送完毕
    USART1->DR = (u8)ch;
    return ch;
}
#endif

#if EN_USART1_RX  //如果使能了接收
// 串口1中断服务程序
// 注意,读取USARTx->SR能避免莫名其妙的错误
u8 USART_RX_BUF[USART_REC_LEN];  //接收缓冲,最大USART_REC_LEN个字节.
// 接收状态
// bit15，    接收完成标志
// bit14，    接收到0x0d
// bit13~0，  接收到的有效字节数目
u16 USART_RX_STA = 0;  //接收状态标记

// 初始化IO 串口1
// bound:波特率
void uart_init(u32 bound) {
    // GPIO端口设置
    USART_InitTypeDef USART_InitStructure;

    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);   //使能GPIOA时钟
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);  //使能USART1时钟

    // 串口1对应引脚复用映射
    gpioAFConf(GPIOA, GPIO_Pin_9 | GPIO_Pin_10, GPIO_Speed_50MHz, GPIO_OType_PP,
               GPIO_PuPd_UP, GPIO_AF_USART1);

    // USART1 Tx 初始化设置
    USART_InitStructure.USART_BaudRate = bound;  //波特率设置
    USART_InitStructure.USART_WordLength =
        USART_WordLength_8b;  //字长为8位数据格式
    USART_InitStructure.USART_StopBits = USART_StopBits_1;  //一个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;     //无奇偶校验位
    USART_InitStructure.USART_HardwareFlowControl =
        USART_HardwareFlowControl_None;  //无硬件数据流控制
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;  //收发模式
    USART_Init(USART1, &USART_InitStructure);  //初始化串口1

    USART_Cmd(USART1, ENABLE);  //使能串口1
    // USART_ClearFlag(USART1, USART_FLAG_TC);

    // 串口 1 Rx 中断
#if EN_USART1_RX
    USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);            // 开启相关中断
    nvicIRQConf(USART1_IRQn, 3, 3);
#endif
}
//串口1中断服务程序
void USART1_IRQHandler(void) {
    u8 Res;
#if SYSTEM_SUPPORT_OS  //如果SYSTEM_SUPPORT_OS为真，则需要支持OS.
    OSIntEnter();
#endif
    // 接收中断(接收到的数据必须是0x0d 0x0a结尾)
    if (USART_GetITStatus(USART1, USART_IT_RXNE) != RESET) {
        Res = USART_ReceiveData(USART1);      // (USART1->DR); 读取接收到的数据
        if ((USART_RX_STA & 0x8000) == 0) {   // 接收未完成
            if (USART_RX_STA & 0x4000) {      // 接收到了0x0d
                if (Res != 0x0a)
                    USART_RX_STA = 0;         // 接收错误, 重新开始
                else
                    USART_RX_STA |= 0x8000;   // 接收完成了
            } else {                          // 还没收到0X0D
                if (Res == 0x0d)
                    USART_RX_STA |= 0x4000;
                else {
                    USART_RX_BUF[USART_RX_STA & 0X3FFF] = Res;
                    USART_RX_STA++;
                    if (USART_RX_STA > (USART_REC_LEN - 1))
                        USART_RX_STA = 0;     // 接收错误, 重新开始
                }
            }
        }
    }
#if SYSTEM_SUPPORT_OS  // 如果SYSTEM_SUPPORT_OS为真，则需要支持OS.
    OSIntExit();
#endif
}
#endif
